add README file

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
         <div sec:authorize="isAuthenticated()">
             <h4><a href="/logout">Log out</a></h4>
         </div>
-        <h4><a href="/directories/certificateTitleType">Certificate title type (for all)</a></h4>
+        <h4><a href="/directories/certificateTitleType">Certificate title type (only for admin)</a></h4>
 
         </div>
         </body>
