--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,7 +9,7 @@
 <h3>There was some error</h3>
         <table>
             <tr>
-            <td><a href="index" class="btn btn-primary">Main menu</a></td>
+            <td><a href="/" class="btn btn-primary">Main menu</a></td>
             </tr>
         </table>
 
